# GEngine

./: .README.md.swp  .circle.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
.circleci/: config.yml
.travisci/: config.yml
Windows/: CMakeLists.txt  Makefile
Windows/src/: .defs.h.swp  .gengine.hpp.swp  game3d.cpp
Windows/tests/: main.cpp
include/: defs.h  defs.hpp  draw.hpp  game2d.hpp  gengine.hpp
src/: Makefile  defs.cpp  draw.cpp  game2d.cpp  gengine.cpp  main.cpp  render.cpp
src/include/: gengine.hpp
